test/ui/test/packages/faulty-component-paths/two/package.stderr
error: could not load the executable component ‘epsilon’ in package ‘test’
  ┌─ ${TEST_FOLDER}/packages/faulty-component-paths/two/
  │
  ├─ ${TEST_FOLDER}/packages/faulty-component-paths/two/package.metadata:9:16
  │
9 │         path: "",
  │               ⟫⟪
  │
 note: Is a directory (os error 21)

error: aborting due to previous error

