test/ui/test/packages/faulty-component-paths/two/package.metadata
# TEST fail check

name: test,
version: "0.0.0",

components: {
    epsilon: {
        type: executable,
        path: "",
    },
},
